# LearnWGPU-rs

./: .gitignore  Cargo.toml  README.md  _quarto.yml  about.qmd  index.qmd  rust-toolchain.toml
_site/: index.html  introduction.html  search.json
_site/site_libs/bootstrap/: bootstrap.min.css
biotonic_sort/: Cargo.toml
biotonic_sort/src/: lib.rs  main.rs  shader.wgsl
bitonic_sort/: Cargo.toml  README.md  index.html
bitonic_sort/src/: lib.rs  main.rs  shader.wgsl
bitonic_sort/tests/: test.rs
compute_example/: Cargo.toml  index.html
compute_example/src/: lib.rs  main.rs  shader.wgsl
demos/: hello-world.qmd
demos/example_cube/: index.qmd
demos/example_fish/: index.qmd
demos/wgpu_examples/: index.qmd  webgpu.js
docs/: about.html  index.html  robots.txt  search.json  sitemap.xml
docs/assets/: Amago0.obj.mtl
docs/demos/: hello-world.html
docs/demos/example_cube/: index.html
docs/demos/example_cube/pkg/: README.md  example_cube.d.ts  example_cube.js  example_cube_bg.wasm  example_cube_bg.wasm.d.ts  package.json
docs/demos/example_fish/: index.html
docs/demos/example_fish/pkg/: example_fish.d.ts  example_fish.js  example_fish_bg.wasm  example_fish_bg.wasm.d.ts  package.json
docs/demos/wgpu_examples/: index.html  webgl2.js
docs/slides/: intro.html  introduction.html  sph_simulation.html
example_cube/: Cargo.toml  build.rs
example_cube/src/: camera.rs  lib.rs  main.rs  resources.rs  shader.frag  shader.vert  shader.wgsl
example_fish/: Cargo.toml  build.rs  index.html
example_fish/src/: camera.rs  gui.rs  lib.rs  model.rs  resources.rs  texture.rs  timer.rs
hello_compute/: Cargo.toml  index.html
hello_compute/src/: lib.rs  main.rs  shader.comp  shader_convert.wgsl
hello_synchronization/: Cargo.toml  index.html
hello_synchronization/src/: lib.rs  main.rs  shaders.wgsl
hello_workgroups/: Cargo.toml  index.html
hello_workgroups/src/: lib.rs  main.rs  shader.wgsl
slides/: intro.md  introduction.qmd  sph_simulation.qmd
sph_particles/: Cargo.toml  README.md  build.rs  index.html
sph_particles/assets/shader/: compute_depth_filter.wgsl  compute_depth_filter_basic.wgsl  compute_particle.wgsl  compute_particle_2d.wgsl  compute_particle_3d.wgsl  copy_depth.wgsl  foo.h.wgsl  math.h.wgsl  particle.h.wgsl  render_mesh.wgsl  render_particle.wgsl  render_particle_2d.wgsl  render_particle_3d.wgsl  render_particle_depth_3d.wgsl  render_particle_thickness_3d.wgsl  render_water.wgsl  world.h.wgsl
sph_particles/shader/: compute_particle.wgsl  render_particle.wgsl
sph_particles/src/: camera.rs  compute.rs  compute_depth_filter.rs  grid.rs  grid_2d.rs  grid_3d.rs  gui.rs  lib.rs  main.rs  materials.rs  model.rs  particle_system.rs  particles.rs  render.rs  renderer.rs  resources.rs  texture.rs  timer.rs  uniforms.rs  vertex_data.rs  wgsl_utils.rs
sph_particles/src/particle_system/: gpu_pass.rs  particles.rs  utils.rs
sph_particles/src/renderer/: bind_group_layout_cache.rs  compute.rs  compute_depth_filter.rs  compute_pass_copy_depth.rs  compute_pass_depth_filter.rs  compute_pass_depth_filter_basic.rs  compute_pass_particle.rs  gpu_cache.rs  render.rs  render_pass_depth.rs  render_pass_water.rs
test_pass_performance/: Cargo.toml
test_pass_performance/src/: lib.rs  main.rs  shader.wgsl
