[workspace]
members = [
  "example_cube",
  "example_fish",
  "hello_compute",
  "hello_workgroups",
  "hello_synchronization",
  "compute_example",
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[workspace.dependencies]
bytemuck = { version = "1.12", default-features = false, features = ["derive"] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
