[package]
name = "example_fish"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = "0.3"
log = "0.4"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["time"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

## GUI ##
egui = "0.26"
egui_demo_lib = "0.26"
wgpu = "0.19"
winit = "0.29"
egui_wgpu_backend = "0.28"   # egui 0.26, wgpu 0.19
egui_winit_platform = "0.21" # egui 0.26, winit 0.29

bytemuck = { version = "1.12", features = ["derive"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
cgmath = "0.18"
anyhow = "1.0"
tobj = { version = "4.0", features = ["async"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
tracing-wasm = "0.2.1"
wgpu = { version = "0.19", features = ["webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
reqwest = { version = "0.12" }
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[features]
